<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fragment_login_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/login_cover"
                android:scaleType="fitXY"/>

            <ImageView
                android:scaleType="fitXY"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:alpha="0.7"
                android:background="@drawable/fragment_login_gradient"/>
        </FrameLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_logo_spacing_top"
            android:src="@drawable/wolox_logo_large"
            android:layout_gravity="center_horizontal|bottom"/>
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/fragment_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/fragment_login_email" />

        <EditText
            android:id="@+id/fragment_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large_extra"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:hint="@string/fragment_login_password" />

        <ar.com.wolox.android.training.ui.views.CustomButtonView
            android:id="@+id/fragment_login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ar.com.wolox.android.training.ui.views.CustomButtonView
            android:id="@+id/fragment_login_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:visibility="invisible"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/spacing_big_extra"
            android:indeterminateTint="@color/colorPrimary"/>

        <TextView
            android:id="@+id/fragment_login_terms_conditions"
            android:layout_margin="@dimen/spacing_medium_more"
            android:textAlignment="center"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:text="@string/fragment_login_terms_conditions"
            android:textSize="@dimen/font_medium_extra"
            android:textColorLink="@android:color/tab_indicator_text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />


    </FrameLayout>

</LinearLayout>